css/dataTables.bootstrap.css
/* ... */
div.dt-container div.dt-processing {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 200px;
  margin-left: -100px;
  margin-top: -26px;
  text-align: center;
  padding: 1em 0;
}
div.dt-container div.dt-scroll-body {
  border-bottom: 1px solid #ddd;
}
div.dt-container div.dt-scroll-body table,
div.dt-container div.dt-scroll-body tbody > tr:last-child > * {
  border-bottom: none;
}

div.dt-scroll-head table.dataTable {
  margin-bottom: 0 !important;
}

div.dt-scroll-body > table {
  border-top: none;
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}
div.dt-scroll-body > table > thead .sorting:after,
div.dt-scroll-body > table > thead .sorting_asc:after,
div.dt-scroll-body > table > thead .sorting_desc:after {
  display: none;
}
div.dt-scroll-body > table > tbody > tr:first-child > th,
div.dt-scroll-body > table > tbody > tr:first-child > td {
  border-top: none;
}

div.dt-scroll-foot > .dt-scroll-footInner {
  box-sizing: content-box;
}
div.dt-scroll-foot > .dt-scroll-footInner > table {
  margin-top: 0 !important;
  border-top: none;
}

@media screen and (max-width: 767px) {
  div.dt-container div.dt-length,
  div.dt-container div.dt-search,
  div.dt-container div.dt-info,
  div.dt-container div.dt-paging {
    text-align: center;
  }
  div.dt-container div.row {
    margin-bottom: 0;
  }
  div.dt-container div.row > * {
    margin-bottom: 0.75rem;
  }
}
table.dataTable.table-condensed > thead > tr th.dt-orderable-asc, table.dataTable.table-condensed > thead > tr th.dt-orderable-desc, table.dataTable.table-condensed > thead > tr th.dt-ordering-asc, table.dataTable.table-condensed > thead > tr th.dt-ordering-desc,
table.dataTable.table-condensed > thead > tr td.dt-orderable-asc,
table.dataTable.table-condensed > thead > tr td.dt-orderable-desc,
table.dataTable.table-condensed > thead > tr td.dt-ordering-asc,
table.dataTable.table-condensed > thead > tr td.dt-ordering-desc {
  padding-right: 4px;
}
table.dataTable.table-condensed > thead > tr th.dt-orderable-asc span.dt-column-order, table.dataTable.table-condensed > thead > tr th.dt-orderable-desc span.dt-column-order, table.dataTable.table-condensed > thead > tr th.dt-ordering-asc span.dt-column-order, table.dataTable.table-condensed > thead > tr th.dt-ordering-desc span.dt-column-order,
table.dataTable.table-condensed > thead > tr td.dt-orderable-asc span.dt-column-order,
table.dataTable.table-condensed > thead > tr td.dt-orderable-desc span.dt-column-order,
table.dataTable.table-condensed > thead > tr td.dt-ordering-asc span.dt-column-order,
table.dataTable.table-condensed > thead > tr td.dt-ordering-desc span.dt-column-order {
  right: 4px;
}
table.dataTable.table-condensed > thead > tr th.dt-type-date span.dt-column-order, table.dataTable.table-condensed > thead > tr th.dt-type-numeric span.dt-column-order,
table.dataTable.table-condensed > thead > tr td.dt-type-date span.dt-column-order,
table.dataTable.table-condensed > thead > tr td.dt-type-numeric span.dt-column-order {
  right: 4px;
}

div.dt-scroll-head table.table-bordered {
  border-bottom-width: 0;
}

div.table-responsive > div.dt-container > div.row {
  margin: 0;
}
div.table-responsive > div.dt-container > div.row > div[class^=col-]:first-child {
  padding-left: 0;
}
div.table-responsive > div.dt-container > div.row > div[class^=col-]:last-child {
  padding-right: 0;
}

